--- a/settings.gradle
+++ b/settings.gradle
@@ -366,6 +366,9 @@ include ":plugins:parcelize:parcelize-compiler",
         ":plugins:parcelize:parcelize-runtime",
         ":kotlin-parcelize-compiler"
 
+include ":plugins:better-web-workers:better-web-workers-compiler",
+        ":plugins:better-web-workers:better-web-workers-runtime"
+
 include ":kotlin-lombok-compiler-plugin",
         ":kotlin-lombok-compiler-plugin.common",
         ":kotlin-lombok-compiler-plugin.k1",
@@ -846,3 +849,7 @@ if (buildProperties.isKotlinNativeEnabled) {
     include ':kotlin-native-shared'
     project(":kotlin-native-shared").projectDir = "$rootDir/kotlin-native/shared" as File
 }
+include 'webworkers'
+include 'plugins:better-web-workers:webworkers'
+findProject(':plugins:better-web-workers:webworkers')?.name = 'webworkers'
+
