[FE 1.0] Allow generation of nested classes for java classes from plugins

--- a/libraries/tools/kotlin-maven-lombok/pom.xml
+++ b/libraries/tools/kotlin-maven-lombok/pom.xml
@@ -86,6 +86,7 @@
                 <configuration>
                     <args>
                         <arg>-opt-in=org.jetbrains.kotlin.compiler.plugin.ExperimentalCompilerApi</arg>
+                        <arg>-Xcontext-receivers</arg>
                     </args>
                 </configuration>
             </plugin>
