Remove :libraries:tools:stdlib-compiler-classpath project
It was used as a workaround to allow jvmTarget=1.6 in stdlib.

--- a/settings.gradle
+++ b/settings.gradle
@@ -313,8 +313,7 @@ include ":kotlin-imports-dumper-compiler-plugin",
         ":kotlinx-serialization-compiler-plugin",
         ":kotlin-serialization",
         ":kotlin-serialization-unshaded",
-        ":wasm:wasm.ir",
-        ":libraries:tools:stdlib-compiler-classpath"
+        ":wasm:wasm.ir"
 
 
 include ":kotlinx-atomicfu-compiler-plugin",
