Fix basic blocks order for WHEN expression
Merge-request: KT-MR-6833
Merged-by: Vladimir Sukharev <Vladimir.Sukharev@jetbrains.com>

--- a/kotlin-native/backend.native/tests/build.gradle
+++ b/kotlin-native/backend.native/tests/build.gradle
@@ -6151,6 +6151,10 @@ fileCheckTest("filecheck_smoke0") {
     annotatedSource = project.file('filecheck/smoke0.kt')
 }
 
+fileCheckTest("filecheck_when") {
+    annotatedSource = project.file('filecheck/when.kt')
+}
+
 if (HostManager.@Companion.hostIsMac) {
     fileCheckTest("filecheck_force_arm_instruction_set") {
         enabled = enabled && cacheTesting == null
