Fix JDK-dependent stdlib tests after advancing jvmTarget

--- a/libraries/stdlib/jvm/build.gradle
+++ b/libraries/stdlib/jvm/build.gradle
@@ -133,6 +133,10 @@ compileTestKotlin {
     }
 }
 
+test {
+    systemProperty("supportsNamedCapturingGroup", false)
+}
+
 compileLongRunningTestKotlin {
     kotlinOptions.freeCompilerArgs += "-opt-in=kotlin.ExperimentalStdlibApi"
 }
