--- a/libraries/stdlib/jdk7/build.gradle
+++ b/libraries/stdlib/jdk7/build.gradle
@@ -79,6 +79,10 @@ compileTestKotlin {
     ]
 }
 
+tasks.withType(Test) {
+    systemProperty("supportsNamedCapturingGroup", false)
+}
+
 configureFrontendIr(project)
 
 LibrariesCommon.configureJava9Compilation(project, 'kotlin.stdlib.jdk7')
