[KT-42830][Reverse C Interop] Add API to get value of boxed primitives
Merge-request: KT-MR-6836
Merged-by: Vladimir Sukharev <Vladimir.Sukharev@jetbrains.com>

--- a/kotlin-native/backend.native/tests/build.gradle
+++ b/kotlin-native/backend.native/tests/build.gradle
@@ -5236,6 +5236,13 @@ for (i in 0..2) {
     }
 }
 
+dynamicTest("kt42830") {
+    disabled = (project.testTarget == 'wasm32') // wasm doesn't support -produce dynamic
+    source = "produce_dynamic/kt-42830/box_unbox.kt"
+    cSource = "$projectDir/produce_dynamic/kt-42830/main.c"
+    useGoldenData = true
+}
+
 dynamicTest("produce_dynamic_unhandledException") {
     disabled = (project.testTarget == 'wasm32') || // Uses exceptions + dynamic is unsupported for wasm.
             (cacheTesting != null) // Disabled due to KT-47828.
