Count in interfaces/classes/packages when resolving name clashes with "_" suffix mangling
^KT-41904 Fixed

Merge-request: KT-MR-6862
Merged-by: Vladimir Sukharev <Vladimir.Sukharev@jetbrains.com>

--- a/kotlin-native/backend.native/tests/build.gradle
+++ b/kotlin-native/backend.native/tests/build.gradle
@@ -5225,6 +5225,13 @@ dynamicTest("kt39496") {
     useGoldenData = true
 }
 
+dynamicTest("kt41904") {
+    disabled = (project.testTarget == 'wasm32') // wasm doesn't support -produce dynamic
+    source = "produce_dynamic/kt-41904/hello.kt"
+    cSource = "$projectDir/produce_dynamic/kt-41904/main.c"
+    useGoldenData = true
+}
+
 for (i in 0..2) {
     dynamicTest("kt42796_$i") {
         clangTool = "clang++"
