Enable bytecode desugaring in Android test projects
After advancing stdlib jvmTarget to 1.8.

--- a/libraries/tools/kotlin-gradle-plugin-integration-tests/src/test/resources/testProject/AndroidProject/Android/build.gradle
+++ b/libraries/tools/kotlin-gradle-plugin-integration-tests/src/test/resources/testProject/AndroidProject/Android/build.gradle
@@ -20,6 +20,12 @@ android {
         targetSdkVersion 22
     }
 
+    // Needed for older AGP. It can be removed when the lowest supported AGP version is 4.2.0 or newer.
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
+
     flavorDimensions "myFlavor"
     productFlavors {
         flavor1 {
