--- a/libraries/tools/kotlin-gradle-plugin-integration-tests/src/test/resources/testProject/AndroidProject/Test/build.gradle
+++ b/libraries/tools/kotlin-gradle-plugin-integration-tests/src/test/resources/testProject/AndroidProject/Test/build.gradle
@@ -20,6 +20,12 @@ android {
         testApplicationId 'org.jetbrains.kotlin.gradle.test.androidalfa'
     }
 
+    // Needed for older AGP. It can be removed when the lowest supported AGP version is 4.2.0 or newer.
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
+
     targetProjectPath ':Android'
     if (VersionNumber.parse(android_tools_version) < VersionNumber.parse("3.0.0-alpha1")) {
         targetVariant 'flavor1Debug'
