--- a/libraries/tools/kotlin-gradle-plugin-integration-tests/src/test/resources/testProject/kapt2/icAnonymousTypes/build.gradle
+++ b/libraries/tools/kotlin-gradle-plugin-integration-tests/src/test/resources/testProject/kapt2/icAnonymousTypes/build.gradle
@@ -29,6 +29,12 @@ android {
     versionName "1.0"
   }
 
+  // Needed for older AGP. It can be removed when the lowest supported AGP version is 4.2.0 or newer.
+  compileOptions {
+    sourceCompatibility 1.8
+    targetCompatibility 1.8
+  }
+
   dataBinding {
     enabled true
   }
