--- a/settings.gradle
+++ b/settings.gradle
@@ -215,6 +215,8 @@ include ":kotlin-imports-dumper-compiler-plugin",
         ":plugins:fir-plugin-prototype",
         ":plugins:fir-plugin-prototype:plugin-annotations",
         ":plugins:fir-plugin-prototype:fir-plugin-ic-test",
+        ":plugins:worker-context-code-coloring",
+        ":plugins:worker-context-code-coloring:plugin-annotations",
         ":kotlin-test:kotlin-test-common",
         ":kotlin-test:kotlin-test-annotations-common",
         ":kotlin-test:kotlin-test-jvm",
